<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_partido_edition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="esei.uvigo.es.dm.View.PartidoEditionActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_gravity="center">

            <TextView
                android:text="@string/gestionar_partido"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".45"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/equipoLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblLocal" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Equipo"
                android:ems="10"
                android:id="@+id/edLocal"
                android:maxLines="1"
                android:layout_gravity="right"
                android:gravity="right"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/marcadorLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblMarcLocal"
                android:layout_weight=".45" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/edMarcLocal"
                android:layout_weight=".45"
                android:maxLength="2"
                android:gravity="right"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center_vertical"
            android:layout_marginTop="109dp"
            android:layout_below="@+id/linearLayout4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:text="@string/equipoVisitante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblVisitante"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/edVisitante"
                android:hint="Equipo"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:maxLines="1"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".45"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:text="@string/marcadorVisitante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblMarcVistante"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/edMarcVisitante"
                android:layout_weight="1"
                android:gravity="right"
                android:inputType="number"
                android:maxLength="2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="44dp">

            <Button
                android:text="@string/guardar_partido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btGuardarPartido"
                android:layout_weight="0.64" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
