<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_entrenamiento_edition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="esei.uvigo.es.dm.View.EntrenamientoEditionActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_weight="0.29"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:text="@string/gestion_entrenamiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical">

        <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblNombre"
            android:textSize="16sp"
            android:layout_weight="1.33" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edNombreEntreno"
                android:layout_weight="0.79"
                android:hint="Nombre entreno..."
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_marginTop="42dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="0.59">

            <TextView
                android:text="@string/tipo_entreno"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:id="@+id/lblEntreno"
                android:textSize="16sp"
                android:layout_weight="0.19" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edTipoEntreno"
                android:layout_weight="0.67" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="152dp">

            <TextView
                android:text="@string/descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblMarcLocal"
                android:textSize="16sp"
                android:layout_weight="0.50" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/edDescripcion"
                android:maxLength="144"
                android:inputType="text"
                android:layout_weight="0.61" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:text="@string/guardar_entreno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btGuardarEntreno"
                android:layout_marginBottom="66dp"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
